--- a/index.html
+++ b/index.html
@@ -43,88 +43,86 @@
                     <h1 class="me-banner__quote">Leading safety solutions in the marketplace today</h1>
                     <p class="me-banner__quote">Our core mission is to help safety managers</p>
                     <br>
-                    <a class="typeform-share link me-banner__launch" href="https://dhamotharanb.typeform.com/to/c4KQMB" data-mode="popup">Get enquiry &rarr;</a>                    
+                    <a class="typeform-share link me-banner__launch" href="https://dhamotharanb.typeform.com/to/c4KQMB" data-mode="popup">Get enquiry &rarr;</a>
                 </section>
             </div>
         </div>
         <div class="me-section me-section--pull" id="safety-product">
             <div class="me-container">
-                <section>
-                    <div class="me-products">
-                        <ul>
-                            <li>
-                                <div class="me-product">
-                                    <div class="me-product__content">
-                                        <div>
-                                            <h2 class="me-product__title">Cotton Knitted Gloves</h2>
-                                            Multi-colours with excellent quality of different weights like 40, 50, 60 and 70 grams/pair.
-                                        </div>
+                <div class="me-products">
+                    <ul>
+                        <li>
+                            <section class="me-product">
+                                <div class="me-product__content">
+                                    <div>
+                                        <h1 class="me-product__title">Cotton Knitted Gloves</h1>
+                                        <p>Multi-colours with excellent quality of different weights like 40, 50, 60 and 70 grams/pair.</p>
                                     </div>
-                                    <div class="me-product__img" style="background-image: url(assets/images/product/glove/cotton-knitted.jpg);"></div>
                                 </div>
-                            </li>
-                            <li>
-                                <div class="me-product">
-                                    <div class="me-product__content">
-                                        <div>
-                                            <h2 class="me-product__title">Cotton Canvas Gloves</h2>
-                                            Rough area application this 14" gloves offers good protection.
-                                        </div>
+                                <div class="me-product__img" style="background-image: url(assets/images/product/glove/cotton-knitted.jpg);"></div>
+                            </section>
+                        </li>
+                        <li>
+                            <section class="me-product">
+                                <div class="me-product__content">
+                                    <div>
+                                        <h1 class="me-product__title">Cotton Canvas Gloves</h1>
+                                        <p>Rough area application this 14" gloves offers good protection.</p>
                                     </div>
-                                    <div class="me-product__img" style="background-image: url(assets/images/product/glove/cotton-canvas.jpg);"></div>
                                 </div>
-                            </li>
-                        </ul>
-                        <ul class="alt">
-                            <li>
-                                <div class="me-product">
-                                    <div class="me-product__content me-product__content--alt">
-                                        <div>
-                                            <h2 class="me-product__title">Finger Cots</h2>
-                                            Fingertips clean and protected while working in pastel or charcoal, etc.,<br> Anti-static also available which can be used in electronics application.
-                                        </div>
+                                <div class="me-product__img" style="background-image: url(assets/images/product/glove/cotton-canvas.jpg);"></div>
+                            </section>
+                        </li>
+                    </ul>
+                    <ul class="alt">
+                        <li>
+                            <section class="me-product">
+                                <div class="me-product__content me-product__content--alt">
+                                    <div>
+                                        <h1 class="me-product__title">Finger Cots</h1>
+                                        <p>Fingertips clean and protected while working in pastel or charcoal, etc.,<br> Anti-static also available which can be used in electronics application.</p>
                                     </div>
-                                    <div class="me-product__img" style="background-image: url(assets/images/product/glove/finger-cots.jpg);"></div>
                                 </div>
-                            </li>
-                            <li>
-                                <div class="me-product">
-                                    <div class="me-product__content me-product__content--alt">
-                                        <div>
-                                            <h2 class="me-product__title">Banian waste</h2>
-                                            &mdash; Mixed color waste<br>
-                                            &mdash; Pure White Baniyan Waste<br>
-                                            &mdash; Mixed baniyan yarn waste<br>
-                                            &mdash; Pure white baniyan yarn waste<br>
-                                        </div>
+                                <div class="me-product__img" style="background-image: url(assets/images/product/glove/finger-cots.jpg);"></div>
+                            </section>
+                        </li>
+                        <li>
+                            <section class="me-product">
+                                <div class="me-product__content me-product__content--alt">
+                                    <div>
+                                        <h1 class="me-product__title">Banian waste</h1>
+                                        <p>&mdash; Mixed color waste</p>
+                                        <p>&mdash; Pure White Baniyan Waste</p>
+                                        <p>&mdash; Mixed baniyan yarn waste</p>
+                                        <p>&mdash; Pure white baniyan yarn waste</p>
                                     </div>
-                                    <div class="me-product__img" style="background-image: url(assets/images/product/glove/banianyarn.jpg);"></div>
                                 </div>
-                            </li>
-                        </ul>
-                    </div>
-                </section>
+                                <div class="me-product__img" style="background-image: url(assets/images/product/glove/banianyarn.jpg);"></div>
+                            </section>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
         <div class="me-section me-section--push me-section--img" style="background-image: url(assets/images/wide/section-product.jpg);">
             <div class="me-container">
                 <section>
-                    <h1 class="me-section__title">Transport Service</h1>
+                    <h2 class="me-section__title">Transport Service</h2>
                 </section>
             </div>
         </div>
         <div class="me-section me-section--push">
             <div class="me-container">
                 <section>
-                    <h1 class="me-section__title">Vehicles</h1>
+                    <h2 class="me-section__title">Vehicles</h2>
                     <div class="me-products me-products--alt">
                         <ul class="alt" id="vehicle-innova">
                             <li>
-                                <div class="me-product">
+                                <section class="me-product">
                                     <div class="me-product__content me-product__content--alt">
                                         <div>
-                                            <h2 class="me-product__title">Innova <span>(8 seater)</span></h2>
+                                            <h1 class="me-product__title">Innova <span>(8 seater)</span></h1>
                                             <div class="me-product__table">
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Local Travel Tariff</div>
@@ -172,15 +170,15 @@
                                         </div>
                                     </div>
                                     <div class="me-product__img" style="background-image: url(assets/images/product/vehicle/innova.jpg);"></div>
-                                </div>
+                                </section>
                             </li>
                         </ul>
                         <ul id="vehicle-tavera">
                             <li>
-                                <div class="me-product">
+                                <section class="me-product">
                                     <div class="me-product__content">
                                         <div>
-                                            <h2 class="me-product__title">Tavera <span>(9 seater)</span></h2>
+                                            <h1 class="me-product__title">Tavera <span>(9 seater)</span></h1>
                                             <div class="me-product__table">
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Local Travel Tariff</div>
@@ -228,15 +226,15 @@
                                         </div>
                                     </div>
                                     <div class="me-product__img" style="background-image: url(assets/images/product/vehicle/tavera.jpg);"></div>
-                                </div>
+                                </section>
                             </li>
                         </ul>
                         <ul class="alt" id="vehicle-tempo-traveller">
                             <li>
-                                <div class="me-product">
+                                <section class="me-product">
                                     <div class="me-product__content me-product__content--alt">
                                         <div>
-                                            <h2 class="me-product__title">Tempo Traveller <span>(12 seater)</span></h2>
+                                            <h1 class="me-product__title">Tempo Traveller <span>(12 seater)</span></h1>
                                             <div class="me-product__table">
                                                 <div class="me-product__row">
                                                     <div class="me-product__col">Local Travel Tariff</div>
@@ -284,7 +282,7 @@
                                         </div>
                                     </div>
                                     <div class="me-product__img" style="background-image: url(assets/images/product/vehicle/traveller.jpg);"></div>
-                                </div>
+                                </section>
                             </li>
                         </ul>
                     </div>
@@ -294,9 +292,9 @@
         <div class="me-section me-section--push" style="background-color: #ddd;">
             <div class="me-container">
                 <section>
-                    <h1 class="me-section__title" style="margin-bottom: 0">
+                    <h2 class="me-section__title" style="margin-bottom: 0">
                         <a class="typeform-share link" style="color:currentColor;" href="https://dhamotharanb.typeform.com/to/c4KQMB" data-mode="popup">Get product enquiry &rarr;</a>
-                    </h1>
+                    </h2>
                 </section>
             </div>
         </div>
