--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                                 <li><a href="#vehicle-tempo-traveller">Tempo Traveller</a></li>
                             </ul>
                         </li>
+                        <li><a class="typeform-share link" href="https://dhamotharanb.typeform.com/to/c4KQMB" data-mode="popup">Enquiry</a></li>
                         <li><a href="#about">About</a></li>
                     </ul>
                     <ul class="me-nav">
