--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <nav class="me-header__nav">
                     <ul class="me-nav">
                         <li><a href="#safety-product">Safety Product</a></li>
-                        <li class="me-nav__inner"><a>Transport Service</a>
+                        <li class="me-nav__inner"><a>Travel Service</a>
                             <ul>
                                 <li><a href="#vehicle-innova">Innova</a></li>
                                 <li><a href="#vehicle-tavera">Tavera</a></li>
@@ -109,7 +109,7 @@
         <div class="me-section me-section--push me-section--img" style="background-image: url(assets/images/wide/section-product.jpg);">
             <div class="me-container">
                 <section>
-                    <h2 class="me-section__title">Transport Service</h2>
+                    <h2 class="me-section__title">Travel Service</h2>
                 </section>
             </div>
         </div>
