--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="description" content="">
         <link rel="icon" href="assets/images/brand/mechetronz-icon-brand.png" type="image/png">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     </head>
     <body>
         <!-- header -->
